--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,4 +15,4 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSH_KEY }}
-          scripts: "cd /home/ubuntu/devops && ./deploy.sh"
+          script: "cd /home/ubuntu/devops && ./deploy.sh"
